# dataclass

./: Cargo.toml  LICENSE
app_common/: Cargo.toml
app_common/src/: lib.rs  tree_format.rs
ast/: Cargo.toml
ast/src/: context.rs  lib.rs  name.rs  node.rs
codegen/: Cargo.toml
codegen/src/: lib.rs  snippet.rs
dcg/: Cargo.toml
dcg-cpp/: Cargo.toml
dcg-cpp/src/: main.rs
dcg-rust/: Cargo.toml
dcg-rust/src/: main.rs
dcg/src/: generator.rs  main.rs
example/: foo.dcg
parser/: Cargo.toml
parser/src/: dataclass.pest  lib.rs  raw_to_ast.rs
