[package]
name = "app_common"
version = "0.1.0"
authors = ["mohaque <44129090+mohaque0@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
colored = "2.0.0"
pest = "2.1.3"
regex = "1.5.4"
serde_json = "1.0.64"

ast = { path = "../ast" }
parser = { path = "../parser" }