[package]
name = "dcg"
version = "0.1.0"
authors = ["mohaque"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
clap = "2.33.3"
pest = "2.1.3"
regex = "1.5.4"
serde_json = "1.0.64"
which = "4.1.0"

app_common = { path = "../app_common" }
ast = { path = "../ast" }
parser = { path = "../parser" }
